feature(model-reset) on this branch i also create a bycript on passwords[Start #166650148]
